--- a/2-2-12-AssignmentQuestion.ipynb
+++ b/2-2-12-AssignmentQuestion.ipynb
@@ -42,7 +42,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q3KzJyjv3rnA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q3KzJyjv3rnA",
+        "outputId": "51555ae0-5d4b-491d-c02c-b25a5b67c550"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -57,8 +61,26 @@
         "                                    tf.keras.layers.Dense(10, activation=tf.nn.softmax)])\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "32768/29515 [=================================] - 0s 0us/step\n",
+            "40960/29515 [=========================================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "26427392/26421880 [==============================] - 0s 0us/step\n",
+            "26435584/26421880 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "16384/5148 [===============================================================================================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "4423680/4422102 [==============================] - 0s 0us/step\n",
+            "4431872/4422102 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -77,8 +99,10 @@
         "id": "Qj1slkbFcHJT"
       },
       "source": [
-        "training_images  = #YOUR CODE HERE#\n",
-        "test_images = #YOUR CODE HERE#"
+        "# normalize the input data to be between 0-1\n",
+        "\n",
+        "training_images  = training_images / 255.0\n",
+        "test_images = test_images / 255.0"
       ],
       "execution_count": null,
       "outputs": []
